Bug 234292 - KGet crashed at exit
Summary: KGet crashed at exit
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
: 233666 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-13 22:27 UTC by fake name
Modified: 2010-06-30 15:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fake name 2010-04-13 22:27:44 UTC
Application: kget (2.4.2)
KDE Platform Version: 4.4.2 (KDE 4.4.2) "release 239"
Qt Version: 4.6.2
Operating System: Linux 2.6.31.12-0.2-desktop x86_64
Distribution: "openSUSE 11.2 (x86_64)"

-- Information about the crash:
I cleaned the finished downloads after some download and then I closed
KGet pressing Ctrl+Q. I done the downloads with Firefox using FlashGot.

 -- Backtrace:
Application: KGet (kget), signal: Aborted
[KCrash Handler]
#5  0x00007f776ed614e5 in raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#6  0x00007f776ed629b0 in abort () at abort.c:88
#7  0x00007f77705098f4 in qt_message_output (msgType=QtFatalMsg, buf=<value optimized out>) at global/qglobal.cpp:2250
#8  0x00007f7770509ad2 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=
    0x7f777296c8b0 "Fatal Error: Accessed global static '%s *%s()' after destruction. Defined at %s:%d", ap=0x7fff73013df0) at global/qglobal.cpp:2296
#9  0x00007f7770509c85 in qFatal (msg=0x1628 <Address 0x1628 out of bounds>) at global/qglobal.cpp:2479
#10 0x00007f777282ba7c in <anonymous struct>::operator->(void) (this=<value optimized out>) at /usr/src/debug/kdelibs-4.4.2/kio/kio/scheduler.cpp:320
#11 0x00007f777282c180 in KIO::Scheduler::cancelJob (job=0x12e8190) at /usr/src/debug/kdelibs-4.4.2/kio/kio/scheduler.cpp:357
#12 0x00007f777282c1aa in KIO::SimpleJob::doKill (this=0x1628) at /usr/src/debug/kdelibs-4.4.2/kio/kio/job.cpp:316
#13 0x00007f7770c3dbd9 in KJob::kill (this=0x1628, verbosity=5672) at /usr/src/debug/kdelibs-4.4.2/kdecore/jobs/kjob.cpp:106
#14 0x00007f77727e9261 in KIO::Job::doKill (this=<value optimized out>) at /usr/src/debug/kdelibs-4.4.2/kio/kio/job.cpp:180
#15 0x00007f7770c3dbd9 in KJob::kill (this=0x1628, verbosity=5672) at /usr/src/debug/kdelibs-4.4.2/kdecore/jobs/kjob.cpp:106
#16 0x00007f776174bedb in ChecksumSearchController::~ChecksumSearchController (this=0x7f7761955460, __in_chrg=<value optimized out>)
    at /usr/src/debug/kdenetwork-4.4.2/kget/transfer-plugins/checksumsearch/checksumsearchtransferdatasource.cpp:43
#17 0x00007f776ed64065 in __run_exit_handlers (status=0, listp=0x7f776f0844a8, run_list_atexit=true) at exit.c:78
#18 0x00007f776ed640b5 in exit (status=5672) at exit.c:100
#19 0x00007f776ed4da84 in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, 
    rtld_fini=<value optimized out>, stack_end=0x7fff73014128) at libc-start.c:252
#20 0x0000000000429f69 in _start () at ../sysdeps/x86_64/elf/start.S:113
Warning: the current language does not match this frame.
The current source language is "auto; currently c".

Reported using DrKonqi
Comment 1 Matthias Fuchs 2010-04-15 16:56:49 UTC
SVN commit 1115181 by mfuchs:

Do not manually kill jobs for ChecksumSearch, let them do that themselves.

BUG:234292

 M  +0 -5      checksumsearchtransferdatasource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1115181
Comment 2 Matthias Fuchs 2010-04-15 16:58:08 UTC
SVN commit 1115182 by mfuchs:

Backport r1115181
Do not manually kill jobs for ChecksumSearch, let them do that themselves.

CCBUG:234292

 M  +0 -5      checksumsearchtransferdatasource.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1115182
Comment 3 Matthias Fuchs 2010-06-30 15:04:19 UTC
*** Bug 233666 has been marked as a duplicate of this bug. ***