Do not manually kill jobs for ChecksumSearch, let them do that themselves.

BUG:234292

svn path=/trunk/KDE/kdenetwork/kget/; revision=1115181